<resources>
    <string name="preference_key">SHAREDPREF</string>
    <string name="app_name">Midterm</string>
    <string name="username">Username</string>
    <string name="login_by_email">Login By Email</string>
    <string name="please_fill_info">Please fill all information</string>
    <string name="wrong_credentials">Wrong credentials</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="user_key">CURRENTUSER</string>
    <string name="my_account">My Account</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="student_management">Student Management</string>
    <string name="home">Home</string>
    <string name="system_users">System Users</string>
    <string name="profile">Profile</string>
    <string name="hello">Hello</string>
    <string name="add_user">Add User</string>
    <string name="view_user">View Users List</string>
    <string name="age">Age</string>
    <string name="fullname">Full Name</string>
    <string name="phoneNum">Phone Number</string>
    <string name="activated">Activated</string>
    <string name="deactivated">Deactivated</string>
    <string name="submit">Submit</string>
    <string name="fill_username">Please fill username</string>
    <string name="fill_age">Please enter age</string>
    <string name="valid_age">Please enter a valid age</string>
    <string name="fill_name">Please enter full name</string>
    <string name="fill_phone">Please enter a phone number</string>
    <string name="fill_password">Please enter a password</string>
    <string name="close">Close</string>
    <string name="fill_activate">Please choose an activated status</string>
    <string name="fill_email">Please enter an email address</string>
    <string name="notification">Notification</string>
    <string name="add_user_success">Add user successfully</string>
    <string name="add_user_unsuccessfully">Add user unsuccessfully</string>
    <string name="update_user">Update User</string>
    <string name="upload_image_success">Upload Image Success</string>
    <string name="upload_image_failed">Upload Image Failed</string>
    <string name="update_user_success">Update User Success</string>
    <string name="update_user_failed">Update User Failed</string>
    <string name="email_already_exist">Email has already existed</string>
    <string name="update_profile_success">Update your profile success</string>
    <string name="update_profile_failed">Update your profile failed</string>
    <string name="student">Students</string>
    <string name="certificate">Certificate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_student">ADD STUDENT</string>
    <string name="view_students">VIEW STUDENTS LIST</string>
    <string name="system_students">STUDENT LIST</string>
    <string name="update_student">UPDATE STUDENT</string>
    <string name="system_certifications">CERTIFICATION LIST</string>
    <string name="add_certification">ADD CERTIFICATION</string>
    <string name="certificateName">Certification Name</string>
    <string name="fill_certificationName">Please enter Certification name</string>
    <string name="add_certification_success">Add Certification Success</string>
    <string name="add_certification_fail">Add Certification Failed</string>
    <string name="view_certification">VIEW CERTIFICATION LIST</string>
    <string name="certificateNameCreatedTime">Created Time</string>
    <string name="certificationName">Certification Name</string>
    <string name="update_certification">UPDATE CERTIFICATION</string>
    <string name="update_certification_success">Update Certification Success</string>
    <string name="update_certification_failed">Update Certification Failed</string>
    <string name="add_user_fail">Add Student Failed</string>
    <string name="certification">CERTIFICATION</string>
    <string name="add_user_certification">ADD CERTIFICATION FOR USER</string>
    <string name="add_user_certification_fail">ADD CERTIFICATION FOR USER FAILED</string>
    <string name="add_user_certification_success">ADD CERTIFICATION FOR USER SUCCESS</string>
    <string name="update_user_certification_success">Update Certification for User Success</string>
    <string name="update_user_certification_failed">Update Certification for User Failed</string>
</resources>