<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingHorizontal="15dp"
        android:background="@color/primary_color">
        <TextView
            android:textAlignment="center"
            android:layout_marginBottom="50dp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:text="@string/student_management"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:text="@string/login_by_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/emailTxt"
            android:layout_marginTop="10dp"
            android:hint="Email"
            android:textColorHint="@color/grey"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:backgroundTint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:inputType="textPassword"
            android:id="@+id/passwordTxt"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:textColorHint="@color/grey"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:backgroundTint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:textSize="16sp"
            android:textStyle="bold"
            android:id="@+id/loginBtn"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:text="@string/login"
            android:background="@drawable/main_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <ProgressBar
        android:background="@android:color/transparent"
        android:layout_gravity="center"
        android:id="@+id/loadingIndicator"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="gone"/>

</FrameLayout>
