<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_weight="1"
    android:paddingVertical="10dp"
    android:paddingHorizontal="20dp"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".HomeFragment"
    android:background="@color/primary_color"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <FrameLayout
        android:layout_marginBottom="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:layout_gravity="start"
            android:id="@+id/drawerToggleBtn"
            android:background="@android:color/transparent"
            android:src="@drawable/baseline_menu_24"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
        <TextView
            android:layout_gravity="center"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginStart="12dp"
            android:text="@string/student_management"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </FrameLayout>
    <TextView
        android:id="@+id/helloText"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:text="@string/hello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/addUserBtn"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingVertical="20dp"
        android:layout_marginTop="15dp"
        android:drawableEnd="@drawable/baseline_chevron_right_24"
        android:paddingHorizontal="15dp"
        android:textAlignment="center"
        android:drawableStart="@drawable/baseline_person_add_24"
        android:textColor="@color/secondary_color"
        android:text="@string/add_user"
        android:background="@drawable/home_screen_menu_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/viewUserListBtn"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingVertical="20dp"
        android:layout_marginTop="15dp"
        android:drawableEnd="@drawable/baseline_chevron_right_24"
        android:paddingHorizontal="15dp"
        android:textAlignment="center"
        android:drawableStart="@drawable/baseline_person_24"
        android:textColor="@color/secondary_color"
        android:text="@string/view_user"
        android:background="@drawable/home_screen_menu_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
