<?xml version="1.0" encoding="utf-8"?>

<FrameLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="5dp"
    android:clickable="true"
    android:focusable="true"
    android:paddingVertical="10dp"
    android:id="@+id/systemUserItem"
    android:paddingHorizontal="15dp"
    android:background="@drawable/transparent_button"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_gravity="start"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        <TextView
            android:text="@string/fullname"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/userItemFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/userItemPhoneNum"
            android:layout_marginTop="5dp"
            android:text="@string/phoneNum"
            android:textSize="15sp"
            android:textColor="@color/secondary_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/userItemRole"
            android:layout_marginTop="5dp"
            android:text="@string/my_account"
            android:textSize="16sp"
            android:textColor="@color/secondary_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <ImageButton
        android:background="@android:color/transparent"
        android:layout_gravity="center_vertical|end"
        android:id="@+id/userItemNavigateBtn"
        android:src="@drawable/baseline_chevron_right_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</FrameLayout>