<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/primary_color"
    android:paddingVertical="15dp"
    android:paddingHorizontal="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".ProfileFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profileImage"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/boy"
        app:shapeAppearanceOverlay="@style/circle"
        app:strokeWidth="1dp"
        app:strokeColor="@color/secondary_color"
        android:layout_width="160dp"
        android:layout_height="160dp"/>

    <TextView
        android:id="@+id/fullNameTxt"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:text="@string/fullname"
        android:textAlignment="center"
        android:textSize="25dp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/profileBtn"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingVertical="20dp"
        android:layout_marginTop="15dp"
        android:drawableEnd="@drawable/baseline_chevron_right_24"
        android:paddingHorizontal="15dp"
        android:textAlignment="center"
        android:drawableStart="@drawable/baseline_person_pin_24"
        android:textColor="@color/secondary_color"
        android:text="@string/profile"
        android:background="@drawable/home_screen_menu_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/logoutBtn"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingVertical="20dp"
        android:layout_marginTop="15dp"
        android:drawableEnd="@drawable/baseline_chevron_right_24"
        android:paddingHorizontal="15dp"
        android:textAlignment="center"
        android:drawableStart="@drawable/baseline_logout_24"
        android:textColor="@color/secondary_color"
        android:text="@string/logout"
        android:background="@drawable/home_screen_menu_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>