<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingVertical="15dp"
    android:paddingHorizontal="20dp"
    android:layout_width="match_parent"
    android:background="@color/primary_color"
    android:layout_height="match_parent"
    tools:context=".AddUserActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    app:tint="@color/white"
                    android:layout_gravity="start"
                    android:id="@+id/returnButton"
                    android:background="@android:color/transparent"
                    android:src="@drawable/baseline_chevron_left_24"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/titleAdd"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textAllCaps="true"
                    android:layout_gravity="center"
                    android:text="@string/add_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </FrameLayout>

            <TextView
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:text="@string/username"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/usernameTextInput"
                android:theme="@style/TextLabel"
                android:layout_height="wrap_content">

                <EditText
                    android:inputType="text"
                    android:hint="@string/username"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="5dp"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:id="@+id/usernameEdt"
                    android:backgroundTint="@color/secondary_color"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:text="Email"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/emailTextInput"
                android:theme="@style/TextLabel"
                android:layout_height="wrap_content">

                <EditText
                    android:inputType="textEmailAddress"
                    android:hint="Email"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="5dp"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:id="@+id/emailEdt"
                    android:backgroundTint="@color/secondary_color"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:text="@string/age"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:theme="@style/TextLabel"
                android:id="@+id/ageTextInput"
                android:layout_height="wrap_content">

                <EditText
                    android:inputType="number"
                    android:hint="@string/age"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="5dp"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:id="@+id/ageEdt"
                    android:backgroundTint="@color/secondary_color"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:text="@string/fullname"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:theme="@style/TextLabel"
                android:id="@+id/fullNameTextInput"
                android:layout_height="wrap_content">

                <EditText
                    android:inputType="textPersonName"
                    android:hint="@string/fullname"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="5dp"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:id="@+id/fullNameEdt"
                    android:backgroundTint="@color/secondary_color"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:text="@string/phoneNum"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:theme="@style/TextLabel"
                android:id="@+id/phoneNumTextInput"
                android:layout_height="wrap_content">

                <EditText
                    android:inputType="phone"
                    android:hint="@string/phoneNum"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="5dp"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:id="@+id/phoneNumTxt"
                    android:backgroundTint="@color/secondary_color"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:text="@string/password"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:theme="@style/TextLabel"
                android:id="@+id/passwordTextInput"
                android:layout_height="wrap_content">

                <EditText
                    android:inputType="text"
                    android:hint="@string/password"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="5dp"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:id="@+id/passwordEdt"
                    android:backgroundTint="@color/secondary_color"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:text="@string/activated"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioGroup
                android:layout_marginTop="10dp"
                android:id="@+id/activateRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_button"
                android:orientation="horizontal">

                <RadioButton
                    android:textStyle="bold"
                    android:paddingVertical="10dp"
                    android:id="@+id/deactivatedCheck"
                    android:background="@color/radio_selector"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/deactivated"
                    android:textColor="@color/white" />

                <RadioButton
                    android:textStyle="bold"
                    android:paddingVertical="10dp"
                    android:id="@+id/activatedCheck"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/radio_selector"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/activated"
                    android:textColor="@color/white" />
            </RadioGroup>

            <Button
                android:id="@+id/submitBtn"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="@string/submit"
                android:layout_marginTop="20dp"
                android:background="@drawable/fill_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <ProgressBar
            android:visibility="gone"
            android:layout_gravity="center"
            android:id="@+id/loadingIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </FrameLayout>
</ScrollView>
