<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingVertical="15dp"
    android:paddingHorizontal="20dp"
    android:layout_width="match_parent"
    android:background="@color/primary_color"
    android:layout_height="match_parent"
    tools:context=".AddCertificationActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/returnButtonUser"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:background="@android:color/transparent"
                    android:src="@drawable/baseline_chevron_left_24"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/add_certification"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/certificateName"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/certificationNameTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/certificationNameEdt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/secondary_color"
                    android:hint="@string/certificateName"
                    android:inputType="text"
                    android:paddingHorizontal="5dp"
                    android:paddingVertical="10dp"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Detail"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/certificationDetailTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/certificateDetailEdt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/secondary_color"
                    android:hint="Detail"
                    android:inputType="textEmailAddress"
                    android:paddingHorizontal="5dp"
                    android:paddingVertical="10dp"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/activated"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/activateRadioUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_button"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/deactivatedCheckUser"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/radio_selector"
                    android:button="@null"
                    android:gravity="center"
                    android:paddingVertical="10dp"
                    android:text="@string/deactivated"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/activatedCheckUser"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/radio_selector"
                    android:button="@null"
                    android:gravity="center"
                    android:paddingVertical="10dp"
                    android:text="@string/activated"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </RadioGroup>

            <Button
                android:id="@+id/submitBtnUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/fill_button"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

        <ProgressBar
            android:visibility="gone"
            android:layout_gravity="center"
            android:id="@+id/loadingIndicatorUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </FrameLayout>
</ScrollView>
